--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-icon",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Automatic icon resizing for Cordova",
   "main": "index.js",
   "preferGlobal": true,
@@ -12,26 +12,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/AlexDisler/cordova-icon.git"
+    "url": "git://github.com/evidenceprime/cordova-icon.git"
   },
   "keywords": [
     "cordova",
     "icon",
     "resize"
   ],
-  "author": "Alex Disler",
+  "author": "Evidence Prime",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/AlexDisler/cordova-icon/issues"
   },
   "homepage": "https://github.com/AlexDisler/cordova-icon",
   "dependencies": {
-    "colors": "^0.6.2",
-    "fs-extra": "^0.30.0",
+    "fs-extra": "^11.1.0",
     "imagemagick": "^0.1.3",
-    "minimist": "^1.2.0",
-    "q": "^1.0.1",
-    "underscore": "^1.6.0",
-    "xml2js": "^0.4.3"
+    "minimist": "^1.2.7",
+    "q": "^1.5.1",
+    "underscore": "^1.13.6",
+    "xml2js": "^0.4.23"
   }
 }
