--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/AlexDisler/cordova-icon",
   "dependencies": {
+    "colors": "^1.4.0",
     "fs-extra": "^11.1.0",
     "imagemagick": "^0.1.3",
     "minimist": "^1.2.7",
