--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-icon",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Automatic icon resizing for Cordova",
   "main": "index.js",
   "preferGlobal": true,
@@ -33,5 +33,8 @@
     "q": "^1.5.1",
     "underscore": "^1.13.6",
     "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.3"
   }
 }
